Fixed youtube embed fpr https, fixed image alignment via css instead of image manipulation.

--- a/css/style.scss
+++ b/css/style.scss
@@ -241,15 +241,15 @@ ul {
     transition: 0.3s ease-in-out;
   }
 
-  .fa-linkedin:hover {
+  .fa-linkedin-in:hover {
     color: $light-blue;
   }
 
-  .fa-xing-square:hover {
+  .fa-xing:hover {
     color: $light-blue;
   }
 
-  .fa-github-square:hover {
+  .fa-github:hover {
     color: $light-blue;
   }
 
@@ -570,16 +570,14 @@ ul {
       }
 
       img {
-        width: calc(100% + 30px);
+        max-width: calc(100% + 30px);
+        max-height: 400px;
         padding: 0;
         display: block;
-        margin-left: -15px;
-        margin-right: -15px;
+        margin: auto;
 
         @media (min-width: $screen-sm-min) {
-        width: calc(100% + 60px);
-        margin-left: -30px;
-          margin-right: -30px;
+          max-width: calc(100% + 60px);
         }
       }
 
